--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "cakephp-plugin",
     "license": "MIT",
     "require": {
-        "cakephp/cakephp": "^3.5"
+        "cakephp/cakephp": "^3.5",
+		"maiconpinto/cakephp-adminlte-theme": "^1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.14|^6.0"
