--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "Gonube/Auditoria",
+    "name": "gonube/cake-plugin-auditoria",
     "description": "Auditoria plugin for CakePHP",
     "type": "cakephp-plugin",
     "license": "MIT",
     "require": {
         "cakephp/cakephp": "^3.5",
-		"maiconpinto/cakephp-adminlte-theme": "^1.*"
+		"maiconpinto/cakephp-adminlte-theme": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.14|^6.0"
