--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "type": "cakephp-plugin",
     "license": "MIT",
     "require": {
-        "cakephp/cakephp": "^3.5",
-		"maiconpinto/cakephp-adminlte-theme": "dev-master"
+        "cakephp/cakephp": "^3.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7.14|^6.0"
@@ -13,12 +12,6 @@
     "autoload": {
         "psr-4": {
             "Auditoria\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Auditoria\\Test\\": "tests/",
-            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
         }
     }
 }
